[package]
name = "musicus_rs"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
dirs = "3.0"
serde_json = "1.0"
serde = "1.0"
crossbeam = "0.7.1"
random = "0.12.2"
dashmap = "4.0.2"

[dependencies.pancurses]
version = "0.16.1"
features = ["wide"]
