[package]
name = "musicus_rs"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14.0"
dirs = "3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.7.1"
rand = "0.8.3"

[dependencies.pancurses]
version = "0.16.1"
features = ["wide"]
